--- a/src/app/teacher-space/teacher-space.component.html
+++ b/src/app/teacher-space/teacher-space.component.html
@@ -20,9 +20,9 @@
                     <li class="list-group-item px-3">alias Tp : {{item.Name}}</li>
                     <li class="list-group-item px-3">fais le : {{item.Date}}</li>
                     <li class="list-group-item px-3">
-                      <a href="{{item.linkToGitub}}"
+                      <a href="https://drive.google.com/file/d/1taZx5e5p6IPB1GZgZpz3Nz5sP1MxebDn/view?usp=sharing"
                         class="btn btn-primary stretched-link">
-                        Link to Github repo
+                        Get Homework
                       </a>
                     </li>
                   </ul>
@@ -61,11 +61,11 @@
                 <div *ngFor="let item of myUnityExamples" class="card"
                   style="height: 150px;width:350px;position: relative;left: 15%;">
                   <ul class="list-group list-group-light">
-                    <li class="list-group-item px-3">alias Tp : {{item}}</li>
-                    <li class="list-group-item px-3">fais le : {{item}}</li>
-                    <li class="list-group-item px-3"><a href="{{item.linkToGitub}}"
+                    <li class="list-group-item px-3">alias Tp : {{item.Name}}</li>
+                    <li class="list-group-item px-3">fais le : {{item.Date}}</li>
+                    <li class="list-group-item px-3"><a href="https://drive.google.com/file/d/1taZx5e5p6IPB1GZgZpz3Nz5sP1MxebDn/view?usp=sharing"
                         class="btn btn-primary stretched-link">
-                        Link to Github repo</a>
+                        Get Homework</a>
                     </li>
                   </ul>
                 </div>
